# winchroma

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  config.toml  resources.qrc
qml/: Main.qml
qml/components/: ColorPanel.qml  OkDialog.qml  Toast.qml
qml/pages/: BordersPage.qml  ConfigPage.qml  HighlightsPage.qml  TitlebarsPage.qml
src/: app_settings.hpp  main.cpp
src/config/: config_manager.cpp  config_manager.h
src/dwm/: process_utils.h  window_effects.cpp  window_effects.h  window_watcher.cpp  window_watcher.h
src/registry/: registry_manager.cpp  registry_manager.h
src/utils/: process_utils.cpp  process_utils.h
